@@ -16,6 +16,7 @@
 
 namespace INTERMediator;
 
+use INTERMediator\DB\Logger;
 use SimpleSAML\Auth\Simple;
 
 /**
@@ -121,10 +122,21 @@ class SAMLAuth
         $returnValue = null;
         $attributes = $this->authSimple->getAttributes();
         $comps = explode('|', $rule);
-        if (isset($attributes[$comps[0]][$comps[1]]) && count($comps) == 2) {
+        if (is_array($rule)) {
+            $returnValue = '';
+            foreach ($rule as $item) {
+                $returnValue = ((strlen($returnValue) > 0) ? ' ' : '') . $returnValue;
+                $returnValue .= $this->getValuesWithRule($item);
+            }
+        } else if (isset($attributes[$comps[0]][$comps[1]]) && count($comps) == 2) {
             $returnValue = $attributes[$comps[0]][$comps[1]];
         } else if (isset($attributes[$rule])) {
             $returnValue = $attributes[$rule];
+        }
+        if (is_null($returnValue)) {
+            Logger::getInstance()->setWarningMessage('You have to set up the variable $samlAttrRules in params.php'
+                . ' to get the any value from saml attributes.');
+            $returnValue = '';
         }
         return $returnValue;
     }
